Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-62082

When inserting item to Pie Chart, the legend entry is appended instead of being inserted too

XMLWordPrintable

    • 1448df4988763d163b6753f9afddbec7999aedd8 (qtcharts/5.11, 26.4.2018, 5.11.1)

      When inserting an item to a pie chart, it is properly inserted to the index the user gives, but the legend item appended to the end instead of being inserted too.

      Steps to reproduce:

      • Run attached sample
      • Click "Insert item" button
      • EXPECTED: Item is inserted to index 2, and legend item is also inserted at index 2
      • ACTUAL: Item is properly inserted, but legend item is appended to the end of the list

        1. qtbug62082.png
          qtbug62082.png
          51 kB
        2. qtbug62082.zip
          1.0 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            jussi_witick Jussi Witick
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes